style: add z-index to solve bug interface

--- a/app/assets/stylesheets/_header.css
+++ b/app/assets/stylesheets/_header.css
@@ -1,6 +1,7 @@
 #header__wrapper {
   position: sticky;
   top: 0;
+  z-index: 1;
 
   display: flex;
   justify-content: center;
